# tree-sitter-kak

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-kak.pc.in  tree-sitter-kakscript.pc.in
bindings/c/tree_sitter/: tree-sitter-kak.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.mjs  index.d.ts  index.mjs
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kak/: __init__.py  binding.c
bindings/python/tree_sitter_kakscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKakTests/: TreeSitterKakTests.swift
bindings/swift/TreeSitterKakscript/: kakscript.h
bindings/swift/TreeSitterKakscriptTests/: TreeSitterKakscriptTests.swift
queries/: folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: commands.txt  definitions.txt  evaluate_execute.txt  expansions.txt  faces.txt  highlighters.txt  hooks.txt  mappings.txt  modules.txt  programs.txt  strings.txt  try_catch.txt
