[package]
name = "tree-sitter-kak"
description = "Kak grammar for tree-sitter"
version = "0.1.0"
authors = ["Saiful"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "kak"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/saifulapm/tree-sitter-kak"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
